# codopsai

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  run-codops.yml
api/: index.py
codops/: __init__.py  cli.py  openai_client.py
tests/: test_cli.py
